--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Mike Ogrysko # your name (or website title) here
+logo: "/images/ogrysko.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  MBA and PMP with twenty years of experience leading projects and working with teams to develop and implement technical solutions and processes that create value for their organizations. Currently pursuing a Master of Science in Data Science at Loyola University Maryland.
   <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  
+  <a href="https://www.linkedin.com/in/ogrysko/">View My LinkedIn Profile</a>
+
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
