--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mike Ogrysko # your name (or website title) here
-logo: "/images/ogrysko.jpg?raw=true" # your photo (or logo) here
+logo: "/images/ogrysko.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   MBA and PMP with twenty years of experience leading projects and working with teams to develop and implement technical solutions and processes that create value for their organizations. Currently pursuing a Master of Science in Data Science at Loyola University Maryland.
   <br><br>
