--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   MBA and PMP with twenty years of experience leading projects and working with teams to develop and implement technical solutions and processes that create value for their organizations. Currently pursuing a Master of Science in Data Science at Loyola University Maryland.
   <br><br>
+  <a href="mailto:michael.ogrysko@gmail.com">Send me an email</a>
+  <br><br>
   <a href="https://www.linkedin.com/in/ogrysko/">View My LinkedIn Profile</a>
 
 theme: jekyll-theme-minimal
