--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Mike Ogrysko # your name (or website title) here
 logo: "/images/ogrysko.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br>
-  MBA and PMP with twenty years of experience leading projects and working with teams to develop and implement technical solutions and processes that create value for their organizations. Currently pursuing a Master of Science in Data Science at Loyola University Maryland.
+  MBA and PMP with twenty years of experience leading projects and working with teams to develop and implement technical solutions and processes that create value for their organizations. Recently completed Master of Science in Data Science at Loyola University Maryland.
   <br><br>
   <a href="mailto:michael.ogrysko@gmail.com">Send me an email</a>
   <br><br>
